| Summary: | ASTERISK-22105: [patch] res_pjsip - xml doc change for transport config object - remove warning and add text regarding Asterisk restart | ||
| Reporter: | Rusty Newton (rnewton) | Labels: | |
| Date Opened: | 2013-07-18 15:43:53 | Date Closed: | 2013-08-17 12:34:01 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | SVN 12 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Trunk | Attachments: | ( 0) res_sip.patch |
| Description: | See attached patch. Removed warning that is not applicable and adding in a note that a complete restart of Asterisk is needed to effect changes to transport configuration.
Patch against trunk. | ||
| Comments: | By: Richard Mudgett (rmudgett) 2013-07-18 16:05:53.505-0500 I think the new paragraph should be a <note><para>xxx</para></note>. By: Malcolm Davenport (mdavenport) 2013-07-18 16:11:01.489-0500 What about a module unload and module load? Would that be more accurate rather than mandating a restart? By: Matt Jordan (mjordan) 2013-07-18 18:26:52.154-0500 Module unload/load would suffice; however, in practice that is actually rather difficult. {{res_sip}} will have lots of dependencies. To perform a module unload/load you would have to unload all modules using it, then unload. I agree with Richard that it should be a <note>. By: Rusty Newton (rnewton) 2013-07-23 14:20:09.411-0500 Attached revised patch. I put the para in a note. Kept the language the same for simplicity. A newbie just needs to know they can do a complete restart to effect a change, an advanced user will know why when they try to do a module unload/load and see the dependencies. | ||