xml doc change for transport config object - remove non-applicable warning and add text regarding Asterisk restart

(closes issue ASTERISK-22105)


git-svn-id: https://origsvn.digium.com/svn/asterisk/trunk@396899 65c4cc65-6c06-0410-ace0-fbb531ad65f3